# taskmgr

./: .cnb.yml  .env.example  .gitattributes  .gitignore  Prompt.md  README.md
.claude/: settings.local.json
.github/workflows/: codeql.yml  security.yml
mcp-token-estimator/: .gitignore  estimator.py  mcp_token_report.md  pyproject.toml
ops-miniapp/: app.js  app.json  app.wxss  project.config.json  project.private.config.json  theme.json
ops-miniapp/custom-tab-bar/: index.js  index.wxml  index.wxss
ops-miniapp/docs/: guide.md
ops-miniapp/pages/budget/: index.js  index.json  index.wxml  index.wxss
ops-miniapp/pages/budget-categories/: index.js  index.json  index.wxml  index.wxss
ops-miniapp/pages/budget-detail/: index.js  index.json  index.wxml  index.wxss
ops-miniapp/pages/dashboard/: index.js  index.json  index.wxml  index.wxss
ops-miniapp/pages/login/: login.js  login.json  login.wxml  login.wxss
ops-miniapp/pages/project-budget/: index.js  index.json  index.wxml  index.wxss
ops-miniapp/pages/schedule/: index.js  index.json  index.wxml  index.wxss
ops-miniapp/pages/settings/: index.js  index.json  index.wxml  index.wxss
ops-miniapp/pages/todos/: index.js  index.json  index.wxml  index.wxss
ops-miniapp/pages/unit-detail/: index.js  index.json  index.wxml  index.wxss
ops-miniapp/utils/: date.js  request.js
ops-timer-backend/: Dockerfile  env.example  go.mod  go.sum
ops-timer-backend/docs/: README.md  openapi.yaml
ops-timer-frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
ops-timer-frontend/src/: App.vue
(+88 files in other folders)
