[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-token-estimator"
version = "0.1.0"
description = "ops-timer MCP Token 消耗测算工具"
requires-python = ">=3.10"
dependencies = [
    "tiktoken>=0.7",
]

[project.scripts]
estimate = "estimator:main"

[tool.setuptools]
py-modules = ["estimator"]
